[package]
name = "op-patch-util"
version = "0.1.0"
authors = ["Alex Charlton <alex.n.charlton@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"

[dependencies.simple_logger]
version = "1.12.1"
default-features = false
features = ["colors"]