[package]
name = "op-patch-util"
version = "0.1.0"
authors = ["Alex Charlton <alex.n.charlton@gmail.com>"]
edition = "2018"
description = "A tool for creating and modifying patches for the OP-1 and OP-Z"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
stderrlog = "0.5"
wav = "1.0"